fix: rename Home to About, fix skills (), smaller social icons, dark mode colors, show name only on non-about pages, crop DeeDee image

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -175,23 +175,23 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 2rem;
+    font-size: 1.25rem;
 
     a {
       img {
-        width: 2rem;
-        height: 2rem;
-        margin-bottom: 0.5rem;
+        width: 1.25rem;
+        height: 1.25rem;
+        margin-bottom: 0.25rem;
       }
 
       svg {
-        width: 2rem;
-        height: 2rem;
-        margin-bottom: 0.5rem;
+        width: 1.25rem;
+        height: 1.25rem;
+        margin-bottom: 0.25rem;
 
         image {
-          width: 2rem;
-          height: 2rem;
+          width: 1.25rem;
+          height: 1.25rem;
         }
       }
 
