--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,8 +26,8 @@ $yellow-color: #efcc00 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
-$grey-color-dark: #1c1c1d;
-$grey-900: #212529;
+$grey-color-dark: #0f1115;
+$grey-900: #181a1f;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
